* final materials list * custom materials entry form * new job props linked to pipedrive custom fields * missing pipedrive custom fields will be automatically created * due date must be 2+ business days in future * various other changes as requested by team

--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -1,7 +1,10 @@
-.btn-primary {
-  background-color: #F79201;
+.btn {
   border: none;
   cursor: pointer;
+}  
+
+.btn-primary {
+  background-color: #F79201;
 }
 
 .btn-primary:hover {
@@ -144,4 +147,8 @@ ul.order-summary > li > .key {
 
 .shopping-cart-sidebar ul.order-summary {
   flex-direction: column;
+}
+
+.shopping-cart-sidebar button.btn-danger {
+  padding: 0.125rem 0.125rem;
 }
