* finish footer * include contact info + shipping address in field in deal card

--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -161,9 +161,44 @@ ul.order-summary > li > .key {
 .footer {
   background: #25292C url(/images/footer-map.png) no-repeat center center;
   padding: 43px 120px 83px 100px;
+  margin-top: 4rem;
+  color: #9699A6;
 }
 
 .footer h2 {
   font-size: 24px;
   color: white;
+}
+
+.footer .lead {
+  font-weight: 300;
+  font-size: 16px;
+}
+
+.footer input, .footer button {
+  width: 100%;
+}
+
+.footer dd {
+  font-size: 16px;
+  font-weight: 500;
+  color: white;
+}
+
+.footer dt {
+  font-size: 14px;
+  font-weight: 400;
+  margin-left: 42px;
+}
+
+.footer dt {
+  margin-bottom: 1rem;
+}
+
+.footer dd::after {
+  content: ': ';
+}
+
+.footer .copyright {
+  margin-top: 6rem;
 }
